# pplx-sdk

./: .copilot-instructions.md  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  agent.json  pyproject.toml
.agents/skills/code-analysis/: SKILL.md
.agents/skills/code-review/: SKILL.md
.agents/skills/pplx-sdk-dev/: SKILL.md
.agents/skills/reverse-engineer/: SKILL.md
.agents/skills/scaffold-module/: SKILL.md
.claude/agents/: architect.md  awesome-copilot.md  code-reviewer.md  codegraph.md  orchestrator.md  reverse-engineer.md  scaffolder.md  spa-expert.md  sse-expert.md  test-runner.md
.copilot/: mcp.json
.github/: copilot-instructions.md
.github/agents/: pplx-sdk-expert.agent.md
.github/hooks/: copilot-hooks.json  security-gate.sh
.github/hooks/scripts/: post-tool-use.sh  session-end.sh  session-start.sh
.github/prompts/: pplx-sdk-scaffold.prompt.md  review.prompt.md  scaffold.prompt.md  test-fix.prompt.md
.github/skills/code-review/: SKILL.md
.github/skills/scaffold-module/: SKILL.md
.github/skills/sse-streaming/: SKILL.md
.github/skills/test-fix/: SKILL.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  install-copilot-skills.yml
.kode/skills/: code-analysis
.neovate/skills/: sse-streaming
.qwen/skills/: test-fix
architecture/: SKILL.md
awesome-copilot/agents/: pplx-sdk-expert.agent.md
awesome-copilot/collections/: pplx-sdk-development.collection.yml
awesome-copilot/instructions/: pplx-sdk-python.instructions.md
awesome-copilot/prompts/: pplx-sdk-scaffold.prompt.md
code-analysis/: SKILL.md
docs/: AGENTIC_SYSTEM_RESEARCH.md  AGENT_HANDOFF_TESTS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  KNOWLEDGE_INTEGRATION.md  OAUTH_CONNECTORS.md  QUICK_REFERENCE.md  README.md  REST_API.md  SSE_STREAMING.md
examples/: basic_conversation.py  oai_compatible.py  sse_streaming.py
pplx-sdk-dev/: SKILL.md
pplx_sdk/: __init__.py  client.py
pplx_sdk/api/: __init__.py  middleware.py  oai_models.py  oai_server.py
pplx_sdk/core/: __init__.py  exceptions.py  protocols.py  types.py
pplx_sdk/domain/: __init__.py  articles.py  collections.py  entries.py  memories.py  models.py  threads.py
pplx_sdk/shared/: __init__.py  auth.py  logging.py  retry.py
pplx_sdk/streaming/: __init__.py  manager.py  parser.py  types.py
pplx_sdk/transport/: __init__.py  http.py  sse.py
pplx_sdk/utils/: __init__.py  auth.py  logging.py
runner/: .env.example  README.md  docker-compose.yml
scripts/: install-copilot-skills.sh
skills/: architecture  ast-grep  code-analysis  sse-streaming  test-fix
spa-reverse-engineer/: SKILL.md
src/pplx_sdk/: __init__.py  client.py  config.py  fastapi_server.py  models.py  openai_compat.py
sse-streaming/: SKILL.md
tasks/: README.md  architecture.json  code-analysis.json  code-review.json  explore.json  full-workflow.json  reverse-engineer.json  scaffold-module.json  sse-streaming.json  test-fix.json
test-fix/: SKILL.md
tests/: __init__.py  conftest.py  test_core.py  test_models.py  test_shared.py  test_transport.py  test_utils.py
