[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pplx-sdk"
version = "0.1.0"
description = "Python SDK for Perplexity AI with REST API wrappers and OpenAI-compatible API layer"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "pv-udpv", email = "mail@pv-udpv.ru"}
]
keywords = ["perplexity", "ai", "sdk", "openai-compatible", "reverse-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx[http2]>=0.25.0",
]
streaming = [
    "aiostream>=0.4.5",
]
openai = [
    "openai>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/pv-udpv/pplx-sdk"
Documentation = "https://github.com/pv-udpv/pplx-sdk/tree/main/docs"
Repository = "https://github.com/pv-udpv/pplx-sdk.git"
Issues = "https://github.com/pv-udpv/pplx-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pplx_sdk"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "W605"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src/pplx_sdk --cov-report=term-rich --cov-report=html"
testpaths = ["tests"]
aysnio_mode = "auto"
