[tool.poetry]
name = "your-package"
version = "0.1.0"
description = "A description of your package"

[tool.poetry.dependencies]
# Add your production dependencies here

[tool.poetry.dev-dependencies]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov",
    "mypy",
    "ruff",
    "pre-commit"
]
