[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pplx-sdk"
version = "0.1.0"
description = "Python SDK for Perplexity AI with OAI-compatible API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Perplexity AI Reverse Engineers", email = "dev@perplexity.ai" }
]
keywords = ["perplexity", "ai", "sdk", "sse", "streaming", "openai-compatible"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

dependencies = [
    "httpx>=0.25.0",              # HTTP client with streaming support
    "pydantic>=2.0",               # Data validation and serialization
    "python-dotenv>=1.0",          # .env config loading
    "typing-extensions>=4.8",      # Type hints backports
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100",              # OpenAI-compatible API server
    "uvicorn>=0.23",               # ASGI server
    "pydantic[email]>=2.0",        # Email validation for API
]

dev = [
    "pytest>=7.0",                 # Testing framework
    "pytest-asyncio>=0.23",        # Async test support
    "pytest-httpx>=0.27",          # Mock httpx for testing
    "pytest-cov>=4.1",             # Coverage reports
    "mypy>=1.7",                   # Static type checking
    "ruff>=0.1.0",                 # Linting and formatting
    "pre-commit>=3.6",             # Pre-commit hooks
]

docs = [
    "sphinx>=7.0",                 # Documentation generator
    "sphinx-rtd-theme>=1.3",       # ReadTheDocs theme
]

[project.urls]
Homepage = "https://github.com/pv-udpv/pplx-sdk"
Repository = "https://github.com/pv-udpv/pplx-sdk.git"
Issues = "https://github.com/pv-udpv/pplx-sdk/issues"
Documentation = "https://github.com/pv-udpv/pplx-sdk#readme"

[tool.hatch.version]
path = "pplx_sdk/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E", "F", "W",   # pycodestyle, pyflakes, warnings
    "C90",            # mccabe complexity
    "I",              # isort
    "N",              # pep8-naming
    "D",              # pydocstyle
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "ANN",            # flake8-annotations
    "ASYNC",          # flake8-async
    "S",              # bandit (security)
    "C4",             # flake8-comprehensions
    "RUF",            # ruff-specific rules
]
ignore = ["D100", "D104", "D105", "ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Re-exports
"tests/**" = ["S101", "D", "ANN"]  # Asserts, no docstrings in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers -v"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["pplx_sdk"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
